143 Browser Support and Fixing Flexbox Gap in Safari

--- a/09-Omnifood-Optimizations/css/queries.css
+++ b/09-Omnifood-Optimizations/css/queries.css
@@ -131,7 +131,9 @@
   }
 
   .main-nav {
-    background-color: rgba(255, 255, 255, 0.97);
+    background-color: rgba(255, 255, 255, 0.5);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
     position: absolute;
     top: 0;
     left: 0;
